--- a/README
+++ b/README
@@ -38,3 +38,5 @@ parameters:
 5. Install database, run migrations, run fixtures and create a FOS User.
 
 6. Browse to http://kronosgit.dev/app_dev.php/admin/dashboard and insert data and to http://kronosgit.dev/app_dev.php/user/index and start using the app :)
+
+More @ <a href="andrewstarlike.com">Andrew Starlike</a>
