--- a/README
+++ b/README
@@ -39,4 +39,4 @@ parameters:
 
 6. Browse to http://kronosgit.dev/app_dev.php/admin/dashboard and insert data and to http://kronosgit.dev/app_dev.php/user/index and start using the app :)
 
-More @ <a href="andrewstarlike.com">Andrew Starlike</a>
+More @ http://andrewstarlike.com
